--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer {
+  @font-face {
+    font-family: 'Plus Jakarta Sans';
+    src: url('./fonts/PlusJakartaSans-VariableFont_wght.ttf') format('truetype-variations');
+    font-weight: 200 800;
+    font-stretch: 25% 151%;
+  }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components {
+  .heading-lg,
+  .heading-xl,
+  .heading-md,
+  .heading-sm,
+  .body-md {
+    @apply font-bold;
+  }
+  .heading-xl {
+    @apply text-2xl;
+  }
+  .heading-lg {
+    @apply text-lg;
+  }
+  .heading-md {
+    @apply text-base;
+  }
+  .heading-sm {
+    @apply text-sm tracking-[0.15em];
+  }
+  .body-lg {
+    @apply text-base font-medium leading-[1.4375rem];
+  }
+  .body-md {
+    @apply text-sm;
+  }
 }
